<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/y"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/firstNameTxt"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:hint="@string/firstNameTxt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/lastNameTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameTxt"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/lastNameTxt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="241dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/dayTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneTxt"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="32dp"
        android:text="@string/phoneTxt"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/phoneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt" />

    <TextView
        android:id="@+id/bdayTxt"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        android:text="@string/bdayTxt"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spnMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTxt" />

    <EditText
        android:id="@+id/dayTxt"
        android:layout_width="94dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="103dp"
        android:ems="10"
        android:hint="@string/dayTxt"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/swDegreeAndCert"
        app:layout_constraintStart_toEndOf="@+id/spnMonth"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <EditText
        android:id="@+id/yearTxt"
        android:layout_width="94dp"
        android:layout_height="52dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/yearTxt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dayTxt"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <TextView
        android:id="@+id/certTxt"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/certTxt"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdayTxt" />

    <TextView
        android:id="@+id/twoYrTxt"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/twoYr"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/swDegreeAndCert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/certTxt"
        app:layout_constraintTop_toBottomOf="@+id/yearTxt"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/swDegreeAndCert"
        android:layout_width="142dp"
        android:layout_height="52dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="14dp"
        android:checked="true"
        android:textOff="@string/certTxt"
        android:textOn="@string/twoYr"
        app:layout_constraintBottom_toTopOf="@+id/listCert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certTxt"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Spinner
        android:id="@+id/listCert"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="11dp"
        android:entries="@array/listCertificate"
        app:layout_constraintBottom_toTopOf="@+id/txtCert"
        app:layout_constraintEnd_toStartOf="@+id/listMajor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeAndCert" />

    <Spinner
        android:id="@+id/listMajor"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:entries="@array/listMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listCert"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeAndCert" />

    <TextView
        android:id="@+id/txtCert"
        android:layout_width="89dp"
        android:layout_height="31dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:text="@string/certTxt"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nxtBtn"
        app:layout_constraintEnd_toStartOf="@+id/majorTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listCert" />

    <TextView
        android:id="@+id/majorTxt"
        android:layout_width="78dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:text="@string/majorTxt"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nxtBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listMajor"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/nxtBtn"
        android:layout_width="103dp"
        android:layout_height="61dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="17dp"
        android:text="@string/nxtBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/months"
        app:layout_constraintEnd_toStartOf="@+id/dayTxt"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

</androidx.constraintlayout.widget.ConstraintLayout>